--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB68HqUD_YOEY0kz2A1ImwoyvAb4F4aP7Y&libraries=places&callback=initMap"
+    async defer></script>
   </body>
 </html>
